[package]
name = "near-helper"
version = "0.2.1"
edition = "2018"
description = "A helper for NEAR-SDK-RS 4.0 pre-release"
license = "Apache-2.0"
repository = "https://github.com/Wabinab/near_helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "=4.0.0-pre.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true